@@ -186,6 +186,7 @@ section:Ex{nbsp}commands[ex-cmd-index,:index]
 ||:javascript|| Run a JavaScript command through eval() +
 ||:jumps|| Show jumplist +
 ||:let|| Set or list a variable +
+||:loadplugins|| Immediately load all unloaded plugins +
 ||:macros|| List all macros +
 ||:map|| Map a key sequence +
 ||:mapclear|| Remove all mappings +
