@@ -7,6 +7,7 @@
       special versions for the old behavior
     * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
       VimperatorLeave respectively
+    * add :loadplugins command
     * add . mapping
     * add N% normal mode command
     * add interpolation for items such as <url> to autocommands
